infrastructure/kubernetes/app/loki-manifests/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki
  namespace: observability
spec:
  parentRefs:
    - name: traefik
      namespace: default
      group: gateway.networking.k8s.io
      kind: Gateway
      sectionName: https
  hostnames:
    - loki.lan
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: loki-gateway
          port: 80
          group: ""
          kind: Service
          weight: 1
